@@ -49,6 +49,12 @@ typedef struct hostset * hostset_t;
  */
 typedef struct hostlist_iterator * hostlist_iterator_t;
 
+/* ----[ general node name functions: ]---- */
+
+/* getnodename - equivalent to gethostname, but return only the first component of the fully 
+ *	qualified name (e.g. "linux123.foo.bar" becomes "linux123") */
+extern int getnodename (char *name, size_t len);
+
 /* ----[ hostlist_t functions: ]---- */
 
 /* ----[ hostlist creation and destruction ]---- */
@@ -197,6 +203,8 @@ int hostlist_delete(hostlist_t hl, char *hosts);
 /* hostlist_delete_host():
  *
  * Deletes the first host that matches `hostname' from the hostlist hl.
+ * Note: "hostname" argument cannot contain a range of hosts 
+ *       (see hostlist_delete() for this functionality.)
  *
  * Returns 1 if successful, 0 if hostname is not found in list.
  */
